<?xml version="1.0"?>
<package format="2">
  <name>vi_grid_map</name>
  <version>0.0.0</version>
  <description>The vi_grid_map package</description>
  <maintainer email="tatuhirobeike@gmail.com">Tatsuhiro ikebe</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/vi_grid_map</url> -->
  <author email="tatuhirobeike@gmail.com">Tatsuhiro ikebe</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>rviz</build_depend>
  
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
